syntax = "proto3";

package user;

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

service UserService {
  rpc AddUser(User) returns (User);
  rpc GetUser(int32) returns (User);
  rpc ListUsers(Empty) returns (stream User);
}

message Empty {}
