package main

import (
	"context"
	"log"
	"net"
	pb "path/to/your/proto/package"

	"google.golang.org/grpc"
)

type server struct{}

func (s *server) AddUser(ctx context.Context, user *pb.User) (*pb.User, error) {
	// Implement logic to add user to the database
	log.Printf("Adding user: %v", user)
	return user, nil
}

func (s *server) GetUser(ctx context.Context, req *pb.GetUserRequest) (*pb.User, error) {
	// Implement logic to retrieve user from the database
	log.Printf("Getting user with ID: %v", req.Id)
	return &pb.User{}, nil
}

func (s *server) ListUsers(req *pb.Empty, stream pb.UserService_ListUsersServer) error {
	// Implement logic to list users from the database
	users := []*pb.User{} // Fetch users from the database
	for _, user := range users {
		if err := stream.Send(user); err != nil {
			return err
		}
	}
	return nil
}

func main() {
	lis, err := net.Listen("tcp", ":50051")
	if err != nil {
		log.Fatalf("Failed to listen: %v", err)
	}
	s := grpc.NewServer()
	pb.RegisterUserServiceServer(s, &server{})
	log.Println("Server started listening on port 50051")
	if err := s.Serve(lis); err != nil {
		log.Fatalf("Failed to serve: %v", err)
	}
}
